syntax = "proto3";

option go_package = "github.com/ebilsanta/social-network/backend/feed-service/api/proto";

import "post_service.proto";

service FeedService {
  rpc GetFeed (GetFeedRequest) returns (GetFeedResponse) {}
}

message GetFeedRequest {
  string userId = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message GetFeedResponse {
  repeated Post posts = 1;
}