syntax = "proto3";

option go_package = "github.com/ebilsanta/social-network/backend/feed-service/api/proto";

import "google/protobuf/empty.proto";

service FollowerService {
  rpc GetFollowers (GetFollowersRequest) returns (GetFollowersResponse) {}
  rpc GetFollowing (GetFollowingRequest) returns (GetFollowingResponse) {}
  rpc AddFollower (AddFollowerRequest) returns (google.protobuf.Empty) {}
  rpc DeleteFollower (DeleteFollowerRequest) returns (google.protobuf.Empty) {}
}

message GetFollowersRequest {
  string id = 1;
}

message GetFollowersResponse {
  repeated User followers = 1;
}

message GetFollowingRequest {
  string id = 1;
}

message GetFollowingResponse {
  repeated User following = 1;
}

message AddFollowerRequest {
  string followerID = 1;
  string followedID = 2;
}

message DeleteFollowerRequest {
  string followerID = 1;
  string followedID = 2;
}

message User {
  string id = 1;
}
